--- a/server/pom.xml
+++ b/server/pom.xml
@@ -61,7 +61,7 @@
                 <transformer
                   implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>
-                    io.metaloom.test.container.server.DatabaseProviderServerRunner</mainClass>
+                    io.metaloom.test.container.provider.server.DatabaseProviderServerRunner</mainClass>
                 </transformer>
               </transformers>
             </configuration>
