--- a/server/pom.xml
+++ b/server/pom.xml
@@ -71,7 +71,19 @@
                   <mainClass>
                     io.metaloom.test.container.provider.server.DatabaseProviderServerRunner</mainClass>
                 </transformer>
+                <transformer
+                  implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
               </transformers>
+              <filters>
+                <filter>
+                  <artifact>*:*</artifact>
+                  <excludes>
+                    <exclude>META-INF/*.SF</exclude>
+                    <exclude>META-INF/*.DSA</exclude>
+                    <exclude>META-INF/*.RSA</exclude>
+                  </excludes>
+                </filter>
+              </filters>
             </configuration>
           </execution>
         </executions>
