--- a/postgresql-db/pom.xml
+++ b/postgresql-db/pom.xml
@@ -2,15 +2,15 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>postgresql-testdatabase-provider-db</artifactId>
+  <artifactId>testdatabase-provider-db</artifactId>
 
   <parent>
     <groupId>io.metaloom.test</groupId>
-    <artifactId>postgresql-testdatabase-provider</artifactId>
+    <artifactId>testdatabase-provider</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
 
-  <name>PostgreSQL Testdatabase Provider :: DB</name>
+  <name>Testdatabase Provider :: DB</name>
 
   <dependencies>
     <dependency>
