--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.metaloom.test</groupId>
-  <artifactId>postgresql-testdatabase-provider</artifactId>
+  <artifactId>testdatabase-provider</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
   <packaging>pom</packaging>
@@ -13,7 +13,7 @@
     <version>2.0.1</version>
   </parent>
 
-  <name>PostgreSQL Testdatabase Provider</name>
+  <name>Testdatabase Provider</name>
   <inceptionYear>2023</inceptionYear>
 
   <licenses>
@@ -41,7 +41,7 @@
 
   <modules>
     <module>common</module>
-    <module>db</module>
+    <module>postgresql-db</module>
     <module>client</module>
     <module>server</module>
     <module>maven</module>
