--- a/postgresql-db/pom.xml
+++ b/postgresql-db/pom.xml
@@ -2,7 +2,7 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>testdatabase-provider-db</artifactId>
+  <artifactId>testdatabase-provider-postgresql-db</artifactId>
 
   <parent>
     <groupId>io.metaloom.test</groupId>
@@ -10,13 +10,12 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
 
-  <name>Testdatabase Provider :: DB</name>
+  <name>Testdatabase Provider :: PostgreSQL DB</name>
 
   <dependencies>
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>postgresql</artifactId>
-      <version>${testcontainer.version}</version>
     </dependency>
   </dependencies>
 </project>
