--- a/junit4/pom.xml
+++ b/junit4/pom.xml
@@ -2,7 +2,7 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>testdatabase-provider-postgresql-db</artifactId>
+  <artifactId>testdatabase-provider-junit4</artifactId>
 
   <parent>
     <groupId>io.metaloom.test</groupId>
@@ -10,24 +10,17 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
 
-  <name>Testdatabase Provider :: PostgreSQL DB</name>
+  <name>Testdatabase Provider :: JUnit 4</name>
 
   <dependencies>
     <dependency>
-      <groupId>org.testcontainers</groupId>
-      <artifactId>postgresql</artifactId>
-    </dependency>
-
-    <!-- Test -->
-    <dependency>
-      <groupId>org.testcontainers</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <scope>test</scope>
+      <groupId>io.metaloom.test</groupId>
+      <artifactId>testdatabase-provider-client</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <scope>test</scope>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
     </dependency>
   </dependencies>
 </project>
