--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
     </license>
   </licenses>
 
+  <organization>
+    <name>Metaloom</name>
+    <url>https://metaloom.io/</url>
+  </organization>
+
   <developers>
     <developer>
       <id>jotschi</id>
@@ -43,23 +48,11 @@
     <module>common</module>
     <module>postgresql-db</module>
     <module>client</module>
+    <module>junit4</module>
+    <module>junit5</module>
     <module>server</module>
     <module>maven</module>
   </modules>
-
-  <dependencies>
-    <!-- Test -->
-    <dependency>
-      <groupId>org.testcontainers</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
 
   <dependencyManagement>
 
@@ -98,7 +91,7 @@
         <version>${testcontainer.version}</version>
       </dependency>
 
-      <!-- Other -->
+      <!-- Junit -->
       <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
