--- a/server/pom.xml
+++ b/server/pom.xml
@@ -35,7 +35,7 @@
       <artifactId>slf4j-api</artifactId>
     </dependency>
 
-    <!--Test-->
+    <!-- Test -->
     <dependency>
       <groupId>io.metaloom.test</groupId>
       <artifactId>testdatabase-provider-postgresql-db</artifactId>
@@ -48,7 +48,16 @@
       <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
