--- a/junit4/pom.xml
+++ b/junit4/pom.xml
@@ -22,5 +22,19 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
+
+    <!-- Test -->
+    <dependency>
+      <groupId>io.metaloom.test</groupId>
+      <artifactId>testdatabase-provider-postgresql-db</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.metaloom.test</groupId>
+      <artifactId>testdatabase-provider-server</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
