Replace with native http client to reduce dependencies

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -13,10 +13,7 @@
   <name>Testdatabase Provider :: Common</name>
 
   <dependencies>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-core</artifactId>
-    </dependency>
+    <!-- JSON -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
