--- a/common/pom.xml
+++ b/common/pom.xml
@@ -25,8 +25,8 @@
       <version>2.14.2</version>
     </dependency>
     <dependency>
-      <groupId>org.testcontainers</groupId>
-      <artifactId>postgresql</artifactId>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
     </dependency>
 
     <!--Test-->
