--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
           <artifactId>maven-site-plugin</artifactId>
           <version>3.8.2</version>
         </plugin>
+        <plugin>
+          <groupId>io.fabric8</groupId>
+          <artifactId>docker-maven-plugin</artifactId>
+          <version>0.42.0</version>
+        </plugin>
       </plugins>
     </pluginManagement>
     <plugins>
