--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,14 @@
 # syntax=docker/dockerfile:1
 FROM eclipse-temurin:19-jre
 
-ADD target/testdatabase-provider-server-0.0.1-SNAPSHOT.jar /server.jar
+ARG VERSION
+
+COPY maven/ /opt
+
+ADD target/testdatabase-provider-server-$VERSION.jar /server.jar
+
+RUN mv /opt/*.jar /opt/server.jar
 
 EXPOSE 8080/tcp
 
-CMD ["java", "-jar", "/server.jar"]
+CMD ["java", "-jar", "/opt/server.jar"]
