--- a/common/pom.xml
+++ b/common/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>io.metaloom.test</groupId>
     <artifactId>testdatabase-provider</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
   </parent>
 
   <name>Testdatabase Provider :: Common</name>
@@ -42,4 +42,23 @@
     </dependency>
 
   </dependencies>
+
+  <build>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+        <includes>
+          <include>**/provider.build.properties</include>
+        </includes>
+      </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+        <includes>
+          <include>**/*</include>
+        </includes>
+      </resource>
+    </resources>
+  </build>
 </project>
