--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -2,12 +2,13 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>testdatabase-provider-plugin</artifactId>
+  <groupId>io.metaloom.maven</groupId>
+  <artifactId>testdb-maven-plugin</artifactId>
 
   <parent>
     <groupId>io.metaloom.test</groupId>
     <artifactId>testdatabase-provider</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
   </parent>
   <packaging>maven-plugin</packaging>
 
