--- a/junit4/pom.xml
+++ b/junit4/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>io.metaloom.test</groupId>
     <artifactId>testdatabase-provider</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
   </parent>
 
   <name>Testdatabase Provider :: JUnit 4</name>
